--- a/Centr.csproj
+++ b/Centr.csproj
@@ -117,6 +117,12 @@
     <Compile Include="вход.Designer.cs">
       <DependentUpon>вход.cs</DependentUpon>
     </Compile>
+    <Compile Include="Выбор центра.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Выбор центра.Designer.cs">
+      <DependentUpon>Выбор центра.cs</DependentUpon>
+    </Compile>
     <Compile Include="Главная.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -278,6 +284,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="вход.resx">
       <DependentUpon>вход.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Выбор центра.resx">
+      <DependentUpon>Выбор центра.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Главная.resx">
       <DependentUpon>Главная.cs</DependentUpon>
