--- a/Centr.csproj
+++ b/Centr.csproj
@@ -212,6 +212,12 @@
     <Compile Include="Личный кабинет.Designer.cs">
       <DependentUpon>Личный кабинет.cs</DependentUpon>
     </Compile>
+    <Compile Include="Личный_кабинет_сотрудника.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Личный_кабинет_сотрудника.Designer.cs">
+      <DependentUpon>Личный_кабинет_сотрудника.cs</DependentUpon>
+    </Compile>
     <Compile Include="меню_админ.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -364,6 +370,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Личный кабинет.resx">
       <DependentUpon>Личный кабинет.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Личный_кабинет_сотрудника.resx">
+      <DependentUpon>Личный_кабинет_сотрудника.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="меню_админ.resx">
       <DependentUpon>меню_админ.cs</DependentUpon>
